--- a/d2_tokenizing.ipynb
+++ b/d2_tokenizing.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "musinsa = pd.read_csv('./musinsa_final.csv', index_col=0)"
+    "musinsa = pd.read_csv('./musinsa_final.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "'믿고입습니다 핏이 너무 좋고 무난한 반팔티에요 만족도 최상입니다'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,30 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.kiwi_pos(sentence)>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from kiwipiepy import Kiwi\n",
     "\n",
-    "kiwi = Kiwi()\n",
-    "kiwi_pos"
+    "kiwi = Kiwi()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 150/150 [00:00<00:00, 784.12it/s]\n"
+      "100%|██████████| 150/150 [00:00<00:00, 229.84it/s]\n"
      ]
     },
     {
@@ -182,7 +170,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>item_code</th>\n",
        "      <th>brand</th>\n",
        "      <th>star</th>\n",
@@ -195,7 +182,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>MG2DMMT509ABK</td>\n",
        "      <td>MAHAGRID</td>\n",
        "      <td>5</td>\n",
@@ -206,7 +192,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>MG2DMMT509ABK</td>\n",
        "      <td>MAHAGRID</td>\n",
        "      <td>5</td>\n",
@@ -217,7 +202,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>MG2DMMT509ABK</td>\n",
        "      <td>MAHAGRID</td>\n",
        "      <td>5</td>\n",
@@ -228,7 +212,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>MG2DMMT509ABK</td>\n",
        "      <td>MAHAGRID</td>\n",
        "      <td>5</td>\n",
@@ -239,7 +222,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>MG2DMMT509ABK</td>\n",
        "      <td>MAHAGRID</td>\n",
        "      <td>5</td>\n",
@@ -253,12 +235,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0      item_code     brand  star  \\\n",
-       "0           0  MG2DMMT509ABK  MAHAGRID     5   \n",
-       "1           1  MG2DMMT509ABK  MAHAGRID     5   \n",
-       "2           2  MG2DMMT509ABK  MAHAGRID     5   \n",
-       "3           3  MG2DMMT509ABK  MAHAGRID     5   \n",
-       "4           4  MG2DMMT509ABK  MAHAGRID     5   \n",
+       "       item_code     brand  star  \\\n",
+       "0  MG2DMMT509ABK  MAHAGRID     5   \n",
+       "1  MG2DMMT509ABK  MAHAGRID     5   \n",
+       "2  MG2DMMT509ABK  MAHAGRID     5   \n",
+       "3  MG2DMMT509ABK  MAHAGRID     5   \n",
+       "4  MG2DMMT509ABK  MAHAGRID     5   \n",
        "\n",
        "                                              review nickname  lv  \\\n",
        "0                믿고입습니다 핏이 너무 좋고 무난한 반팔티에요 만족도 최상입니다     권제로민   3   \n",
@@ -283,6 +265,31 @@
    "source": [
     "df = kiwi_tokenizing(data_path, user_word, column_name)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "star\n",
+       "5    133\n",
+       "4     12\n",
+       "3      3\n",
+       "1      2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.star.value_counts()"
    ]
   },
   {
