--- a/d2_함수.ipynb
+++ b/d2_함수.ipynb
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def age(df):\n",
+    "def age(df, col_name):\n",
     "    "
    ]
   },
@@ -502,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
