--- a/d1_base.ipynb
+++ b/d1_base.ipynb
@@ -9,6 +9,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, 0, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'num':5, 'total':5}\n",
+    "\n",
+    "temp = 0\n",
+    "for i in range(1, d['num']):\n",
+    "    temp += i\n",
+    "    \n",
+    "n = (d['total'] - temp) / d['num']\n",
+    "\n",
+    "ans = []\n",
+    "for i in range(0, d['num']):\n",
+    "    ans.append(int(n + i))\n",
+    "\n",
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [1,2,3,3,3,4,4]\n",
+    "\n",
+    "cnt = 1\n",
+    "max_cnt = 0\n",
+    "temp_cnt = 0\n",
+    "temp = 0\n",
+    "\n",
+    "for i in array:\n",
+    "    if i == temp:\n",
+    "        cnt += 1\n",
+    "    else:\n",
+    "        cnt = 1\n",
+    "        temp = i\n",
+    "\n",
+    "    if cnt > max_cnt:\n",
+    "        max_cnt = cnt\n",
+    "    elif cnt == max_cnt:\n",
+    "        temp_cnt = cnt\n",
+    "\n",
+    "if temp_cnt == max_cnt:\n",
+    "    max_cnt = -1\n",
+    "\n",
+    "max_cnt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
